Fix alignment of readers filter

--- a/styles/components/forum.scss
+++ b/styles/components/forum.scss
@@ -164,6 +164,7 @@ main.forum {
     }
     .readers-filter-container {
       margin-bottom: -.25rem;
+      margin-right: auto;
     }
     .readers-filter {
       display: block;
